minor edits to the release notes

--- a/hu-solaris-release-notes.adoc
+++ b/hu-solaris-release-notes.adoc
@@ -20,20 +20,21 @@ For specific information about the operating system versions and updates that th
 == What's new in Solaris Host Utilities 8.0
 
 * Solaris Host Utilities 8.0 introduces the `disksort:false` and `cache-nonvolatile:true` parameter settings. These parameters suppress constant sync calls from the host. The sync calls impact performance and aren't required because ONTAP doesn't have volatile cache. For more information, see link:https://docs.oracle.com/en/operating-systems/solaris/oracle-solaris/11.4/tuning/ensuring-proper-cache-flush-behavior-flash-and-nvram-storage-devices.html[Cache Flush Behavior for Flash and NVRAM Storage Devices^].
-* Solaris Host Utilities 8.0 supports automated updates for FC drivers. The FC drivers that bind the parameters for Solaris 11.4 use SD (4D) instead of SSD (4D). For more information, see the link:https://support.oracle.com/knowledge/Sun%20Microsystems/2595926_1.html[Oracle Support Doc ID 2595926.1^].
+* Solaris Host Utilities 8.0 supports automated updates for FC drivers. The FC drivers that bind the parameters for Solaris 11.4 use SCSI disks. For more information, see the link:https://support.oracle.com/knowledge/Sun%20Microsystems/2595926_1.html[Oracle Support Doc ID 2595926.1^].
 
 == Known issues and limitations
 You should be aware of the following known issues and limitations that might impact performance on your specific host.
 
-The Solaris Host Utilities 8.0 release only supports Solaris 11.4 with SPARC and x86 platforms. For Solaris 11.3 and earlier versions, you need to use the Solaris Host Utilities 6.2.
-
-The following issues might affect daily operation in some environments.
-
 [cols=4,options="header"cols="15,15,15,55"]
 |===
-|Bug ID	|Affects Solaris version |Title	|Description
+|Bug ID	|Affects version |Title	|Description
+
+|
+|Solaris Host Utilities 8.0 
+|
+|The Solaris Host Utilities 8.0 release only supports Solaris 11.4 with SPARC and x86 platforms. For Solaris 11.3 and earlier versions, you need to use the Solaris Host Utilities 6.2.
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1385189[1385189^]
-|11.4 
+|Solaris 11.4 
 |Solaris 11.4 FC driver binding changes required in HUK 6.2	|Solaris 11.4 and HUK recommendations:
 FC driver binding is changed from `ssd(4D)` to `sd(4D)`. Move configuration that you have in `ssd.conf` to `sd.conf` as mentioned in Oracle (Doc ID 2595926.1). The behavior varies across newly installed Solaris 11.4 systems and systems upgraded from 11.3 or lower versions.
 |===
