Edits post meeting with SME and other minor updates

--- a/hu-hpux-release-notes.adoc
+++ b/hu-hpux-release-notes.adoc
@@ -13,7 +13,7 @@ summary: Release Notes for HPUX Host Utilities 6.0
 :imagesdir: ./media/
 
 [.lead]
-The release notes describe new features and enhancements, issues fixed in the current release, known issues, limitations, and important cautions related to configuring and managing your specific HP-UX host with your ONTAP storage system.
+The release notes describe new features and enhancements, fixed issues, known issues, limitations, and important cautions related to configuring and managing your specific HP-UX host with your ONTAP storage system.
 
 == What's new in HP-UX Host Utilities 6.0
 
@@ -26,5 +26,5 @@ The HP-UX Host Utilities 6.0 supports the following HP-UX OS versions:
 
 == Known issues and limitations
 
-There are no known issues or limitations for the HP-UX Host Utilities 6.0 release.
+There are no known issues or limitations.
 
