--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -62,4 +62,4 @@ sanlun version
 
 == What's next?
 
-link:hu-hpux-sanlun-utility.html[Learn about the HP-UX "sanlun" utility].
+link:hu-hpux-sanlun-toolkit.html[Learn about the SAN Toolkit].
