--- a/hu_hpux_60_cmd.adoc
+++ b/hu_hpux_60_cmd.adoc
@@ -4,7 +4,7 @@ permalink: hu_hpux_60_cmd.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 ---
-= Use HP-UX Host Utilities 6.0 commands to verify ONTAP storage configuration
+= Use HP-UX Host Utilities commands to verify ONTAP storage configuration
 :hardbreaks:
 :toclevels: 1
 :nofooter:
