--- a/hu-hpux-sanlun-toolkit.adoc
+++ b/hu-hpux-sanlun-toolkit.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu-hpux-sanlun-utility.html
+permalink: hu-hpux-sanlun-toolkit.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the HP-UX Host Utilities 6.0 with ONTAP storage
 ---
-= Learn about the HP-UX "sanlun" utility for ONTAP storage
+= Learn about the SAN Toolkit for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
