--- a/_include/hu/linux-ol-multipathing-chk-config-aff-fas.adoc
+++ b/_include/hu/linux-ol-multipathing-chk-config-aff-fas.adoc
@@ -13,12 +13,12 @@ touch /etc/multipath.conf
 +
 [source,cli]
 ----
-systemctl enable multipathd
+chkconfig multipathd on
 ----
 +
 [source,cli]
 ----
-systemctl start multipathd
+/etc/init.d/multipathd start
 ----
 
 . Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
@@ -38,7 +38,7 @@ The following table shows the Linux OS native compiled multipath parameter setti
 | dev_loss_tmo | "infinity"
 | failback | immediate
 | fast_io_fail_tmo | 5
-| features | "2 pg_init_retries 50"
+| features | "3 queue_if_no_path pg_init_retries 50"
 | flush_on_last_del | "yes"
 | hardware_handler | "0"
 | no_path_retry | queue
@@ -47,7 +47,7 @@ The following table shows the Linux OS native compiled multipath parameter setti
 | path_selector | "service-time 0"
 | polling_interval | 5
 | prio | "ontap"
-| product | LUN.*
+| product | LUN
 | retain_attached_hw_handler | yes
 | rr_weight | "uniform"
 | user_friendly_names | no
@@ -62,37 +62,11 @@ The following table shows the Linux OS native compiled multipath parameter setti
 multipath -ll
 ----
 +
-The default multipath parameters support ASA, AFF, and FAS configurations. In these configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
+The default multipath parameters support AFF and FAS configurations. In these configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
 +
-The following example outputs show the correct parameter settings and path status for ONTAP LUNs in an ASA, AFF, or FAS configuration. 
-+
-[role="tabbed-block"]
-=====
-.ASA configuration
---
-An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time. 
-
-.Show example
-[%collapsible]
-====
-----
-multipath -ll
-3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
-size=10G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-  |- 11:0:7:6   sdbz 68:208  active ready running
-  |- 11:0:11:6  sddn 71:80   active ready running
-  |- 11:0:15:6  sdfb 129:208 active ready running
-  |- 12:0:1:6   sdgp 132:80  active ready running
-----
-====
---
-
-.AFF or FAS configuration
---
 An AFF or FAS configuration should have two groups of paths with higher and lower priorities. Higher priority Active/Optimized paths are served by the controller where the aggregate is located. Lower priority paths are active but non-optimized because they are served by a different controller. Non-optimized paths are only used when optimized paths aren’t available.
 
-The following example displays the output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
+The following example outputs show the correct parameter settings and path status for ONTAP LUNs in an AFF or FAS configuration with two Active/Optimized paths and two Active/Non-Optimized paths:
 
 .Show example
 [%collapsible]
@@ -109,5 +83,3 @@ size=10G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
   |- 15:0:1:35 sdbx  68:176  active ready running
 ----
 ====
---
-=====
