--- a/_include/hu/linux-ol-multipathing-chk-config.adoc
+++ b/_include/hu/linux-ol-multipathing-chk-config.adoc
@@ -1,32 +1,3 @@
----
-sidebar: sidebar
-permalink: hu_ol_79.html
-keywords: host utilities, oracle, linux, 7.9, netapp, ontap
-summary: Describes how to use Oracle Linux 7.9 with ONTAP
----
-= Configure Oracle Linux 7.9 for FCP and iSCSI with ONTAP storage
-:hardbreaks:
-:toclevels: 1P
-:nofooter:
-:icons: font
-:linkattrs:
-:imagesdir: ./media/
-
-[.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Oracle Linux 7.9 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
-
-include::_include/hu/linux-configure-kvm-note.adoc[]
-
-include::_include/hu/linux-enable-san-boot.adoc[]
-
-include::_include/hu/install-linux-host-utilities.adoc[]
-
-== Step 3: Confirm the multipath configuration for your host
-
-You can use multipathing with Oracle Linux 7.9 to manage ONTAP LUNs.
-
-NOTE: You can use the link:hu_rhel_79.html#rhel-rhck[recommended settings for Red Hat Enterprise Linux (RHEL) 7.9] to configure Red Hat Compatible Kernel for Oracle Linux 7.9.
-
 To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs.
 
 .Steps 
@@ -67,7 +38,7 @@ The following table shows the Linux OS native compiled multipath parameter setti
 | dev_loss_tmo | "infinity"
 | failback | immediate
 | fast_io_fail_tmo | 5
-| features | "3 queue_if_no_path pg_init_retries 50"
+| features | "2 pg_init_retries 50"
 | flush_on_last_del | "yes"
 | hardware_handler | "0"
 | no_path_retry | queue
@@ -140,25 +111,3 @@ size=10G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
 ====
 --
 =====
-
-include::_include/hu/exclude-device.adoc[]
-
-include::_include/hu/linux-ol-customize-parameters.adoc[]
-
-== Step 6: Review the known issues
-
-The Oracle Linux 7.9 host with ONTAP storage has the following known issues:
-
-[cols=3*,options="header"]
-|===
-| NetApp Bug ID
-| Title
-| Description
-| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host | When you set the `disable_changed_wwids` multipath configuration parameter to YES, it disables access to the path device in the event of a worldwide identifier (WWID) change. Multipath disables access to the path device until the WWID of the path is restored to the WWID of the multipath device. See the link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^] for more information. 
-|===
-
-== What's next?
-
-include::_include/hu/use-linux-host-utilities.adoc[]
-
-include::_include/hu/asm-mirroring.adoc[]
