--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -4,132 +4,44 @@ permalink: hu_ol_72.html
 keywords: host utilities, oracle, linux, 7.2, netapp, ontap
 summary: Describes how to use Oracle Linux 7.2 with ONTAP
 ---
-
-= Use Oracle Linux 7.2 with ONTAP
+= Configure Oracle Linux 7.2 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
-:toclevels: 1
+:toclevels: 1P
 :nofooter:
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Oracle Linux 7.2 with ONTAP as the target.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Oracle Linux 7.2 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-== Install the Linux Host Utilities
+include::_include/hu/linux-configure-kvm-note.adoc[]
 
-include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
+include::_include/hu/linux-enable-san-boot.adoc[]
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+include::_include/hu/install-linux-host-utilities.adoc[]
 
-== SAN Toolkit
+== Step 3: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_san_toolkit.adoc[]
+You can use multipathing with Oracle Linux 7.2 to manage ONTAP LUNs.
 
-== SAN Booting
+[NOTE]
+====
+* You can use the link:hu_rhel_72.html#rhel-rhck[recommended settings for Red Hat Enterprise Linux (RHEL) 7.2] to configure Red Hat Compatible Kernel for Oracle Linux 7.2.
+* Oracle Linux 7.2 supports Unbreakable Enterprise Kernel (UEK) R3 and UEK R4. The OS boots with UEK R3 kernel by default.
+====
+include::_include/hu/linux-ol-multipathing-alua.adoc[]
 
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+include::_include/hu/exclude-device.adoc[]
 
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
+include::_include/hu/linux-ol-customize-parameters.adoc[]
 
-== Multipathing
+== Step 6: Review the known issues
 
-Oracle Linux 7.2 supports Unbreakable Enterprise Kernel (UEK) R3 and UEK R4. The OS boots with UEK R3 kernel by default.
+There are no known issues.
 
-.Oracle Linux 7.2 UEK R3 Configuration
+== What's next?
 
-For Oracle Linux 7.2 UEK R3, create an empty multipath.conf file. The settings for Oracle Linux 7.2 UEK with and without ALUA update automatically by default. To Enable ALUA Handler, perform the following steps:
+include::_include/hu/use-linux-host-utilities.adoc[]
 
-.	Create a backup of the initrd-image.
-.	Append the following parameter value to the kernel for ALUA and non-ALUA to work:
-`rdloaddriver=scsi_dh_alua`
-+
-.Example
-....
-kernel /vmlinuz-3.8.13-68.1.2.el6uek.x86_64 ro root=/dev/mapper/vg_ibmx3550m421096-lv_root rd_NO_LUKSrd_LVM_LV=vg_ibmx3550m421096/lv_root LANG=en_US.UTF-8 rd_NO_MDSYSFONT=latarcyrheb-sun16 crashkernel=256M KEYBOARDTYPE=pc KEYTABLE=us rd_LVM_LV=vg_ibmx3550m421096/lv_swap rd_NO_DM rhgb quiet rdloaddriver=scsi_dh_alua
-....
-
-.	Use the `dracut -f` command to recreate the initrd-image.
-
-.	Reboot the host.
-.	Verify the output of the `cat /proc/cmdline` command to ensure that the setting is complete.
-
-.Oracle Linux 7.2 UEK R4 Configuration
-
-For Oracle Linux 7.2 UEK R4 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. Oracle Linux 7.2 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
-
-include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
-include::_include/hu/reuse_hu_non_asa_configuration_solo.adoc[]
-
-----
-# multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-| |- 11:0:1:0 sdj 8:144 active ready running
-| |- 11:0:2:0 sdr 65:16 active ready running
-|-+- policy='service-time 0' prio=10 status=enabled
-|- 11:0:0:0 sdb 8:i6 active ready running
-|- 12:0:0:0 sdz 65:144 active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-== Recommended Settings
-
-The Oracle Linux 7.2 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly.
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
-
-
-[cols=2*,options="header"]
-|===
-| Parameter
-| Setting
-| detect_prio | yes
-| dev_loss_tmo | "infinity"
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | "3 queue_if_no_path pg_init_retries 50"
-| flush_on_last_del | "yes"
-| hardware_handler | "0"
-| path_checker | "tur"
-| path_grouping_policy | "group_by_prio"
-| path_selector | "service-time 0"
-| polling_interval | 5
-| prio | "ontap"
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | "uniform"
-| user_friendly_names | no
-| vendor | NETAPP
-|===
-
-.Example
-
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `detect_prio` that are not compatible with ONTAP LUNs.
-If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
-
-----
-defaults {
- path_checker readsector0
- detect_prio no
- }
-devices {
- device {
- vendor "NETAPP "
- product "LUN.*"
- path_checker tur
- detect_prio yes
- }
-}
-----
-
-NOTE: To configure Oracle Linux 7.2 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_72.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.2.
-
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
-
-There are no known issues for the Oracle Linux 7.2 with ONTAP release.
-
+include::_include/hu/asm-mirroring.adoc[]
