--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -23,13 +23,10 @@ include::_include/hu/install-linux-host-utilities.adoc[]
 
 == Step 3: Confirm the multipath configuration for your host
 
-You can use multipathing with Oracle Linux 7.2 to manage ONTAP LUNs.
+You can use multipathing with Oracle Linux 7.2 to manage ONTAP LUNs. Oracle Linux 7.2 supports Unbreakable Enterprise Kernel (UEK) R3 and UEK R4. The OS boots with UEK R3 kernel by default
 
-[NOTE]
-====
-* You can use the link:hu_rhel_72.html#rhel-rhck[recommended settings for Red Hat Enterprise Linux (RHEL) 7.2] to configure Red Hat Compatible Kernel for Oracle Linux 7.2.
-* Oracle Linux 7.2 supports Unbreakable Enterprise Kernel (UEK) R3 and UEK R4. The OS boots with UEK R3 kernel by default.
-====
+NOTE: You can use the link:hu_rhel_72.html#rhel-rhck[recommended settings for Red Hat Enterprise Linux (RHEL) 7.2] to configure Red Hat Compatible Kernel for Oracle Linux 7.2.
+
 include::_include/hu/linux-ol-multipathing-alua.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
