--- a/nvme_rhel_96 .adoc
+++ b/nvme_rhel_96 .adoc
@@ -21,16 +21,28 @@ You can use the following support and features with the NVMe-oF host configurati
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
+** Support for SAN booting using the NVMe/FC protocol.
+** RHEL 9.6 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe-oF. You can use secure in-band authentication for NVMe-oF with RHEL 9.6.
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe-oF. You can use secure in-band authentication for NVMe-oF with RHEL 9.6.
-** RHEL 9.6 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
-** Support for SAN booting using the NVMe/FC protocol.
+** There are no new features available.
 * Known limitations: 
 ** There are no known limitations.
 
-== Validate software versions
+== Step 1: Optionally, enable SAN booting
+You can configure your host to use SAN booting to simplify deployment and improve scalability.
+Before you begin
+Use the Interoperability Matrix Tool to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
+Steps
+. Create a SAN boot namespace and map it to the host.
+See Provision NVMe storage.
+. Enable SAN booting in the server BIOS for the ports to which the SAN boot namespace is mapped.
+For information on how to enable the HBA BIOS, see your vendor-specific documentation.
+. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+
+== Step 2: Validate software versions
 
 You can use the following procedure to validate the minimum supported RHEL 9.6 software versions.
 
@@ -105,7 +117,7 @@ vs_coexistence_LPE36002
 If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
 
-== Configure NVMe/FC
+== Step 3: Configure NVMe/FC
 
 You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
 
@@ -275,12 +287,12 @@ The expected ouptut is 1.
 --
 ====
 
-=== Enable 1MB I/O (Optional)
+=== Step 4: Enable 1MB I/O (Optional)
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 
-== Configure NVMe/TCP
+== Step 5: Configure NVMe/TCP
 
 include::_include/nvme/reuse-nvme-configure-nvme-tcp.adoc[]
 
@@ -563,7 +575,7 @@ nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.25
 Beginning with RHEL 9.6, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
 
-== Validate NVMe-oF
+== Step 6: Validate NVMe-oF
 
 include::_include/nvme/reuse-nvme-validate-nvme-of.adoc[]
 
@@ -724,7 +736,7 @@ nvme netapp ontapdevices -o json
 --
 =====
 
-== Set up secure in-band authentication
+== Step 7: Set up secure in-band authentication
 
 Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP and NVMe/FC between a RHEL 9.6 host and an ONTAP controller.
 
@@ -930,7 +942,7 @@ DHHC-1:03:wSpuuKbBHTzC0W9JZxMBsYd9JFV8Si9aDh22k2BR/4m852vH7KGlrJeMpzhmyjDWOo0PJJ
 --
 =====
 
-== Known issues
+== Step 8: Known issues
 
 No known issues exist for the NVMe-oF host configuration on RHEL 9.6 with ONTAP release.
 
