ontapdoc-2984 minor changes

--- a/nvme_rhel_96 .adoc
+++ b/nvme_rhel_96 .adoc
@@ -295,7 +295,7 @@ The expected ouptut is 1.
 --
 ====
 
-=== Step 4: Optionally, enable 1MB I/O 
+== Step 4: Optionally, enable 1MB I/O 
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
