--- a/_include/nvme/verify-nvme-services.adoc
+++ b/_include/nvme/verify-nvme-services.adoc
@@ -1,9 +1,9 @@
 .Steps
 
-.	Verify that `nvmf-autoconnect.service` is enabled:
+. Verify that `nvmf-autoconnect.service` is enabled:
 +
 `systemctl status nvmf-autoconnect.service`
-
++
 .Show example output
 [%collapsible]
 ====
@@ -17,11 +17,10 @@ Jun 10 04:06:26 SR630-13-201.lab.eng.btc.netapp.in systemd[1]: nvmf-autoconnect.
 Jun 10 04:06:26 SR630-13-201.lab.eng.btc.netapp.in systemd[1]: Finished Connect NVMe-oF subsystems automatically during boot.
 ----
 ====
-
-.	Verify that nvmefc-boot-connections.service is enabled:
+. Verify that `nvmefc-boot-connections.service` is enabled:
 +
 `systemctl status nvmefc-boot-connections.service`
-
++
 .Show example output
 [%collapsible]
 ====
